CRM_Connections/salesforce/force-app/main/default/objects/Pending_Write_Operation__c/Pending_Write_Operation__c.object-meta.xml
<CustomObject>
    <label>Pending Write Operation</label>
    <pluralLabel>Pending Write Operations</pluralLabel>
    <nameField>
        <label>Pending Operation Number</label>
        <type>AutoNumber</type>
        <displayFormat>PWO-{00000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>