CRM_Connections/salesforce/force-app/main/default/objects/Pending_Write_Operation__c/fields/Created_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Created_Timestamp__c</fullName>
    <label>Created Timestamp</label>
    <type>DateTime</type>
</CustomField>