CRM_Connections/salesforce/force-app/main/default/objects/Pending_Write_Operation__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>unresolved</fullName>
                <default>true</default>
                <label>unresolved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>