CRM_Connections/salesforce/force-app/main/default/objects/Pending_Write_Operation__c/fields/Field_Diff__c.field-meta.xml
<CustomField>
    <fullName>Field_Diff__c</fullName>
    <label>Field Diff</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>