CRM_Connections/salesforce/force-app/main/default/objects/Pending_Write_Operation__c/fields/Json_Rpc_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Json_Rpc_Request_Id__c</fullName>
    <label>JSON-RPC Request Id</label>
    <type>Text</type>
    <length>64</length>
</CustomField>