CRM_Connections/salesforce/force-app/main/default/objects/Pending_Write_Operation__c/fields/Operation_Name__c.field-meta.xml
<CustomField>
    <fullName>Operation_Name__c</fullName>
    <label>Operation Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>