CRM_Connections/salesforce/force-app/main/default/objects/Pending_Write_Operation__c/fields/Params_Payload__c.field-meta.xml
<CustomField>
    <fullName>Params_Payload__c</fullName>
    <label>Params Payload</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>