CRM_Connections/salesforce/force-app/main/default/objects/Pending_Write_Operation__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>