CRM_Connections/salesforce/force-app/main/default/objects/Pending_Write_Operation__c/fields/Target_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Resource_Id__c</fullName>
    <label>Target Resource Id</label>
    <type>Text</type>
    <length>64</length>
</CustomField>