CRM_Connections/salesforce/force-app/main/default/objects/Pending_Write_Operation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Pending_Write_Operations</relationshipName>
    <relationshipLabel>Pending Write Operations</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>